--- a/style.css
+++ b/style.css
@@ -314,3 +314,35 @@ header h1 {
   width: 100%;
   border-bottom: 3px solid rgb(0, 225, 255);
 }
+
+/* Submission page */
+
+.back {
+  display: flex;
+  justify-content: center;
+  margin: 100px;
+}
+
+.back button {
+  height: 50px;
+  width: 200px;
+  border: 1px solid rgb(0, 225, 255);
+  border-radius: 999px;
+  outline: none;
+  background: transparent;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.back button:hover {
+  background: rgb(0, 113, 128);
+  transform: scale(1.1);
+}
+
+.back button a {
+  font-weight: 600;
+  color: white;
+  font-size: 20px;
+  text-shadow: 0 2px 1px black;
+  text-decoration: none;
+}
