--- a/style.css
+++ b/style.css
@@ -17,14 +17,14 @@ html {
   top: 0;
   left: 0;
   width: 100vw;
-  height: 70px;
+  height: 8.5vh;
   z-index: 1;
 }
 
 header {
   display: flex;
   position: relative;
-  height: 70px;
+  height: 8.5vh;
   background: linear-gradient(
     to right,
     rgba(36, 36, 36, 0.8),
@@ -46,13 +46,60 @@ header h1 {
   width: 500px;
 }
 
-.nav ul {
+.navTogOpen {
+  display: none;
+  cursor: pointer;
+}
+
+.navMenu {
+  display: block;
+  position: fixed;
+  height: 91.5vh;
+  width: 50%;
+  right: -50%;
+  bottom: 0;
+  background: rgb(41, 41, 41);
+  border-left: 2px solid rgb(0, 225, 255);
+  border-bottom: 2px solid rgb(0, 225, 255);
+  transition: all 0.3s ease;
+}
+
+.navMenu-links {
+  position: absolute;
+  align-items: center;
+  height: 91.5vh;
+  width: 100%;
+  list-style: none;
+  text-align: center;
+}
+
+.navMenu-links li {
+  width: 100%;
+  height: 30.5vh;
+  border-bottom: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.navMenu-links li a {
+  color: white;
+  text-decoration: none;
+  font-size: 30px;
+  width: 100%;
+  height: 30.5vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-links {
   list-style: none;
   display: flex;
   justify-content: space-around;
 }
 
-.nav ul li a {
+.nav-links li a {
   color: rgb(199, 199, 199);
   cursor: pointer;
   text-decoration: underline;
@@ -64,7 +111,7 @@ header h1 {
   letter-spacing: 1px;
 }
 
-.nav ul li a:hover {
+.nav-links li a:hover {
   border-bottom: 2px dashed rgb(0, 225, 255);
   border-top: 2px dashed rgb(0, 225, 255);
   color: white;
@@ -77,6 +124,7 @@ header h1 {
   width: 100%;
   background: url(https://www.dcmax1k.tk/images/codeblur.png);
   background-size: cover;
+  background-position: center;
   border-bottom: 3px solid rgb(0, 225, 255);
 }
 
@@ -141,7 +189,7 @@ header h1 {
 /* Projects/some Contact Default Styles */
 
 #projects {
-  height: 100vh;
+  min-height: 100vh;
   background: rgb(41, 41, 41);
   width: 100%;
   border-bottom: 3px solid rgb(0, 225, 255);
@@ -174,7 +222,7 @@ header h1 {
 
 .project {
   width: 300px;
-  height: 67vh;
+  height: 60vh;
   border: 2px solid rgb(138, 138, 138);
   border-radius: 10px;
   display: flex;
@@ -182,6 +230,12 @@ header h1 {
   align-items: center;
   margin: 10px;
   position: relative;
+}
+
+.project img {
+  height: 25vh;
+  max-width: 98%;
+  margin: 1px;
 }
 
 .project h1 {
@@ -202,12 +256,21 @@ header h1 {
 
 .project-tools ul {
   list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 98%;
+  height: 25vh;
 }
 
 .project-tools ul li {
-  margin: 5px;
-  padding: 10px 100px;
-  text-align: center;
+  margin: 2px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   color: white;
   background: rgb(71, 71, 71);
   box-shadow: 0 1px 1px rgb(0, 225, 255);
@@ -345,4 +408,125 @@ header h1 {
   font-size: 20px;
   text-shadow: 0 2px 1px black;
   text-decoration: none;
+}
+
+/* Responsive Design */
+
+@media screen and (max-width: 1000px) {
+  .nav-links {
+    display: none;
+  }
+
+  .nav {
+    width: 20px;
+    right: 50px;
+  }
+
+  .navMenu.active {
+    position: fixed;
+    height: 91.5vh;
+    width: 50%;
+    right: 0;
+    bottom: 0;
+    background: rgb(41, 41, 41);
+    border-left: 2px solid rgb(0, 225, 255);
+    border-bottom: 2px solid rgb(0, 225, 255);
+  }
+
+  .navMenu-links {
+    position: absolute;
+    align-items: center;
+    height: 91.5vh;
+    width: 100%;
+    list-style: none;
+    text-align: center;
+  }
+
+  .navMenu-links li {
+    width: 100%;
+    height: 30.5vh;
+    border-bottom: 1px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .navMenu-links li a {
+    color: white;
+    text-decoration: none;
+    font-size: 30px;
+    width: 100%;
+    height: 30.5vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .navTogOpen {
+    display: block;
+    color: white;
+    font-size: 30px;
+  }
+
+  .title {
+    width: 75%;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .title h1 {
+    font-size: 50px;
+  }
+
+  .title-links {
+    margin-top: 10px;
+  }
+
+  .title-links ul {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .title-links ul li {
+    margin: 20px;
+  }
+
+  .projects {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #contact form {
+    width: 95%;
+  }
+}
+
+@media screen and (max-width: 512px) {
+  .title {
+    height: 50vh;
+    width: 95%;
+  }
+
+  .title h1 {
+    font-size: 40px;
+    margin-bottom: 20px;
+  }
+
+  .title h3 {
+    font-size: 25px;
+    text-shadow: 0 0.3px 0.5px white;
+  }
+
+  .title-links {
+    margin-top: 50px;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 300px) {
+  .project {
+    width: 95%;
+  }
 }
