--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ header h1 {
 .navMenu {
   display: block;
   position: fixed;
-  height: 91.5vh;
+  height: 91.5%;
   width: 50%;
   right: -50%;
   bottom: 0;
