--- a/style.css
+++ b/style.css
@@ -523,6 +523,10 @@ header h1 {
     margin-top: 50px;
     width: 100%;
   }
+
+  .project h1 {
+    font-size: 20px;
+  }
 }
 
 @media screen and (max-width: 300px) {
