--- a/style.css
+++ b/style.css
@@ -49,6 +49,35 @@ header h1 {
 .navTogOpen {
   display: none;
   cursor: pointer;
+  width: 30px;
+  height: auto;
+  transition: all 0.3s ease;
+  z-index: 1;
+}
+
+.navTogOpen.active {
+  transform: rotate(360deg);
+  opacity: 0;
+  z-index: 0;
+}
+
+.navTogClose {
+  display: none;
+  z-index: 0;
+  cursor: pointer;
+  width: 30px;
+  height: auto;
+  transition: all 0.3s ease;
+  position: absolute;
+  top: 0;
+  right: -15px;
+  opacity: 0;
+}
+
+.navTogClose.active {
+  z-index: 1;
+  opacity: 1;
+  transform: rotate(360deg);
 }
 
 .navMenu {
@@ -211,6 +240,10 @@ header h1 {
   color: white;
   text-shadow: 0 2px 1px black;
   letter-spacing: 5px;
+}
+
+.thanks-title {
+  text-align: center;
 }
 
 .projects {
@@ -468,6 +501,12 @@ header h1 {
     font-size: 30px;
   }
 
+  .navTogClose {
+    display: block;
+    color: white;
+    font-size: 30px;
+  }
+
   .title {
     width: 75%;
   }
@@ -476,6 +515,11 @@ header h1 {
 @media screen and (max-width: 750px) {
   .title h1 {
     font-size: 50px;
+  }
+
+  .thanks-title h1 {
+    font-size: 30px;
+    margin: 90px 5px 0px 5px;
   }
 
   .title-links {
@@ -516,7 +560,7 @@ header h1 {
 
   .title h3 {
     font-size: 25px;
-    text-shadow: 0 0.3px 0.5px white;
+    text-shadow: 0 1px 0.5px white;
   }
 
   .title-links {
