--- a/style.css
+++ b/style.css
@@ -177,12 +177,30 @@ header h1 {
   font-size: 65px;
   text-shadow: 0 1px 1px white;
   font-family: 'Play', sans-serif;
+  animation-name: fade-in;
+  animation-duration: 2s;
 }
 
 .title h3 {
   font-size: 30px;
   text-shadow: 0 0.5px 1px white;
   font-family: 'Play', sans-serif;
+  opacity: 0;
+  animation-name: fade-in;
+  animation-duration: 2s;
+  animation-delay: 1s;
+  animation-fill-mode: forwards;
+}
+
+/* Title Animation Fade In */
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .title-links {
@@ -209,10 +227,44 @@ header h1 {
   text-decoration: none;
   font-size: 25px;
   font-family: 'Play', sans-serif;
+  position: relative;
+  animation-duration: 2s;
 }
 
 .title-links ul li a:hover {
   background: rgba(0, 225, 255, 0.2);
+}
+
+#left-link {
+  animation-name: left-link-slide;
+}
+
+#right-link {
+  animation-name: right-link-slide;
+}
+
+/* Links Animaion Slide In */
+
+@keyframes right-link-slide {
+  0% {
+    opacity: 0;
+    left: 100px;
+  }
+  100% {
+    opacity: 1;
+    left: 0;
+  }
+}
+
+@keyframes left-link-slide {
+  0% {
+    opacity: 0;
+    right: 100px;
+  }
+  100% {
+    opacity: 1;
+    right: 0;
+  }
 }
 
 /* Projects/some Contact Default Styles */
