--- a/style.css
+++ b/style.css
@@ -186,13 +186,24 @@ header h1 {
   text-shadow: 0 0.5px 1px white;
   font-family: 'Play', sans-serif;
   opacity: 0;
-  animation-name: fade-in;
-  animation-duration: 2s;
+  animation-name: fade-slide;
+  animation-duration: 3s;
   animation-delay: 1s;
   animation-fill-mode: forwards;
 }
 
 /* Title Animation Fade In */
+
+@keyframes fade-slide {
+  0% {
+    opacity: 0;
+    transform: translateY(100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+}
 
 @keyframes fade-in {
   0% {
@@ -493,6 +504,28 @@ header h1 {
   font-size: 20px;
   text-shadow: 0 2px 1px black;
   text-decoration: none;
+}
+
+footer {
+  height: 10vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(51, 51, 51);
+}
+
+.footer p {
+  display: flex;
+  align-items: center;
+  color: white;
+}
+
+.footer p img {
+  height: 20px;
+  width: 20px;
+  margin: 5px;
+  border: 1px solid black;
+  border-radius: 50%;
 }
 
 /* Responsive Design */
