--- a/style.css
+++ b/style.css
@@ -179,6 +179,7 @@ header h1 {
   font-family: 'Play', sans-serif;
   animation-name: fade-in;
   animation-duration: 2s;
+  animation-delay: 1s;
 }
 
 .title h3 {
