--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Play&display=swap');
 
+/* Variables */
+:root {
+  --main-color: rgb(0, 225, 255);
+  --background-color: rgb(41, 41, 41);
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -11,6 +17,21 @@ html {
   box-sizing: border-box;
   font-family: 'Source Sans Pro', sans-serif;
 }
+
+/* Custom Scrollbar */
+::-webkit-scrollbar {
+  width: 5px;
+}
+::-webkit-scrollbar-track {
+  background-color: var(--background-color);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--main-color);
+  border: 1px solid black;
+}
+
+/* Start of page */
 
 .header {
   position: fixed;
